<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".View.SignIn">

    <ScrollView
        android:layout_above="@id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_logo_signIn"
                android:layout_width="@dimen/logo_size_signIn"
                android:layout_height="@dimen/logo_size_signIn"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo_nks" />

            <RelativeLayout
                android:id="@+id/layout_your_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_logo_signIn"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/txt_your_site_signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/your_site_signIn"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_your_site_signIn" />

                <TextView
                    android:id="@+id/txt_select_signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_your_site_signIn"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/select_site_signIn"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/textMedium" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_form_singIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_your_site"
                android:layout_marginLeft="@dimen/marginTop_font_signIn"
                android:layout_marginTop="@dimen/marginTop_font_signIn"
                android:layout_marginRight="@dimen/marginTop_font_signIn"
                android:orientation="vertical"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_username_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:errorTextAppearance="@style/HintTextError"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_user_signIn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:cursorVisible="true"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/placeholder_username"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:paddingTop="@dimen/padding_edt_form_signIn"
                        android:paddingBottom="@dimen/padding_edt_form_signIn"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGray"
                        android:textCursorDrawable="@color/colorPrimary"
                        android:textSize="@dimen/textMedium" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_password_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dimens_padding"
                    android:layout_weight="1"
                    app:errorTextAppearance="@style/HintTextError"
                    app:hintTextAppearance="@style/HintText"
                    app:passwordToggleEnabled="true">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_password_signIn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:cursorVisible="true"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/placeholder_password"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:paddingTop="@dimen/padding_edt_form_signIn"
                        android:paddingBottom="@dimen/padding_edt_form_signIn"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@android:color/transparent"
                        android:textCursorDrawable="@color/colorPrimary"
                        android:textSize="@dimen/textMedium"
                        android:theme="@style/EditTextPassword" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/marginTop_font_signIn"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/continue_signIn"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textMedium" />
</RelativeLayout>