<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".View.Account.Account">
    <include
        android:id="@+id/toobar_Mysite"
        layout="@layout/toobar_mysite"
        />
    <ScrollView
        android:layout_below="@id/toobar_Mysite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_save_account">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/RLTVAVATAR"
                android:layout_width="match_parent"
                android:layout_height="@dimen/avatar_size">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_user_header_navigation_main"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:layout_centerHorizontal="true"

                android:layout_margin="@dimen/margin_header_navigation_main"
                android:src="@drawable/ic_supervisor_account_black_120dp" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_Background"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:alpha="0.5"
                android:layout_margin="@dimen/margin_header_navigation_main"
                android:src="#000000"
                 />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:visibility="gone"
                    android:id="@+id/avatar_BackgroundCamera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/margin_header_navigation_main"
                    android:src="@drawable/ic_photo_camera_black_40dp"
                    />
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/layout_form_singIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/RLTVAVATAR"
                android:layout_marginLeft="@dimen/marginTop_font_signIn"
                android:layout_marginTop="@dimen/marginTop_font_signIn"
                android:layout_marginRight="@dimen/marginTop_font_signIn"
                android:orientation="vertical"
                android:weightSum="3">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_username_Account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:errorTextAppearance="@style/HintTextError"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_username_Account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:cursorVisible="true"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/placeholder_username"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:paddingTop="@dimen/padding_edt_form_signIn"
                        android:paddingBottom="@dimen/padding_edt_form_signIn"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGray"
                        android:textCursorDrawable="@color/colorPrimary"
                        android:textSize="@dimen/textMedium" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/textInput_email_Account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:errorTextAppearance="@style/HintTextError"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_email_Account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:cursorVisible="true"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/placeholder_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:paddingTop="@dimen/padding_edt_form_signIn"
                        android:paddingBottom="@dimen/padding_edt_form_signIn"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGray"
                        android:textCursorDrawable="@color/colorPrimary"
                        android:textSize="@dimen/textMedium" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="5dp"
                    android:id="@+id/textInput_password_Account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dimens_padding"
                    android:layout_weight="1"
                    app:errorTextAppearance="@style/HintTextError"
                    app:hintTextAppearance="@style/HintText"
                    app:passwordToggleEnabled="true">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_password_Account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:cursorVisible="true"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/placeholder_password"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:paddingTop="@dimen/padding_edt_form_signIn"
                        android:paddingBottom="@dimen/padding_edt_form_signIn"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@android:color/transparent"
                        android:textCursorDrawable="@color/colorPrimary"
                        android:textSize="@dimen/textMedium" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <TextView
                android:visibility="gone"
                android:id="@+id/txt_passwordrandom_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_form_singIn"
                android:textSize="@dimen/dimens_textsize"
                android:textColor="@color/color_txtEdit"
                android:text="@string/Str_passwordrandom"
                android:layout_marginLeft="20dp"
                />
        </RelativeLayout>
    </ScrollView>
    <Button
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:textColor="@color/color_txtWhite"
        android:textSize="@dimen/dimens_textsize"
        android:textAllCaps="false"
        android:text="@string/Str_btnSaveAccount"
        android:id="@+id/btn_save_account"
        android:layout_width="match_parent"
        android:background="@color/color_btnAdd"
        android:layout_height="@dimen/dimens_heigth_btnAdd" />
</RelativeLayout>